welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:10: error: reassignment to val
		if (j%2==0) {y=1;i=0;fin=gML+1}
                                        ^ZigZag:11: error: reassignment to val
		else {y= -1;i=gML;fin=1}
                                     ^